<resources>
    <string name="app_name">AppCarros</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="textTitle">Vehicle registration</string>
    <string name="textModelo">Enter the car model...</string>
    <string name="textMontadora">Assembler:</string>
    <string name="textAno">Year of manufacture:</string>
    <string name="btnSalvar">Save</string>

    <string-array name="arrayAno">
        <item>Select..</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
    </string-array>

    <string-array name="arrayMontadoras">
        <item>Select...</item>
        <item>BMW</item>
        <item>Chevrolet</item>
        <item>Ferrari</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Koenigsegg</item>
        <item>Lamborghini</item>
        <item>Mercedes</item>
        <item>Pagani</item>
        <item>Volkswagen</item>
    </string-array>

    <string name="txtAtencao">Attention</string>
    <string name="txtConfirmacao">Confirms the deletion of the car</string>
    <string name="txtCancelar">Cancel</string>
    <string name="txtSim">Yes</string>
    
    <string name="txtToast">All fields must be filled</string>

    <string name="txtListaModelo">Model:</string>
    <string name="txtListaMontadora">Assembler:</string>
    <string name="txtListaAno">Year:</string>
    <string name="txtListaId">Id:</string>

</resources>