<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/llFundoLista"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#DDD"
    android:layout_width="match_parent"
    android:layout_height="100dp">
    
    <TextView
        android:id="@+id/tvListaModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/txtListaModelo"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/tvListaMontadora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtListaMontadora"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/tvListaAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtListaAno"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:textSize="20dp"/>


</LinearLayout>